# compression

./: .gitignore  CMakeLists.txt  Huffman.cpp  Huffman.h  Makefile  MinHeap.cpp  MinHeap.h  Node.cpp  Node.h  Node.hpp  README.md  Simple.cpp  Simple.h  Tree.cpp  Tree.h  Tree.hpp  compressed - braulio.txt  compressed - long_test.txt  compressed - test.txt  compressed - test2.txt  compressor  compressor.cpp  decompression  long_test.txt  main.cpp  main_comp.cpp  main_deco.cpp  suraj.txt  test.txt
tests/: compressed - long_test.txt  long_test.txt  test2.txt  test3.txt
